--- a/ansible/playbook/docker-uninstall.yaml
+++ b/ansible/playbook/docker-uninstall.yaml
@@ -5,10 +5,9 @@
 
     - name: INSTALL DOCKER-CE
       shell:
-        # cmd: dpkg -l | grep -i docker
         cmd: sudo apt-get purge -y docker-engine docker docker.io docker-ce docker-ce-cli
         cmd: sudo apt-get autoremove -y --purge docker-engine docker docker.io docker-ce
         cmd: sudo rm -rf /var/lib/docker /etc/docker
         cmd: sudo groupdel docker
-        # cmd: sudo rm -rf /var/run/docker.sock
+        cmd: sudo rm -rf /var/run/docker.sock
         cmd: docker version
