aprendendo sobre jenkins

--- a/ansible/playbook/docker-uninstall.yaml
+++ b/ansible/playbook/docker-uninstall.yaml
@@ -10,3 +10,4 @@
         cmd: rm -rf /var/lib/docker /etc/docker
         cmd: groupdel docker
         cmd: rm -rf /var/run/docker.sock
+      become_user: jenkins
