--- a/ansible/playbook/docker-uninstall.yaml
+++ b/ansible/playbook/docker-uninstall.yaml
@@ -8,6 +8,6 @@
         cmd: apt-get purge -y docker-engine docker docker.io docker-ce docker-ce-cli
         cmd: apt-get autoremove -y --purge docker-engine docker docker.io docker-ce
         cmd: rm -rf /var/lib/docker /etc/docker
-        cmd: groupdel docker
+        # cmd: groupdel docker
         # cmd: rm -rf /var/run/docker.sock
       become_user: jenkins
