aprendendo sobre jenkins

--- a/ansible/playbook/docker-uninstall.yaml
+++ b/ansible/playbook/docker-uninstall.yaml
@@ -1,13 +1,13 @@
 ---
 - hosts: local
   connection: local
+  become_user: jenkins
   tasks:
 
     - name: UNINSTALL DOCKER-CE
       shell:
-        cmd: sudo apt-get purge -y docker-engine docker docker.io docker-ce docker-ce-cli
-        cmd: sudo apt-get autoremove -y --purge docker-engine docker docker.io docker-ce
-        cmd: sudo rm -rf /var/lib/docker /etc/docker
-        cmd: sudo groupdel docker
-        cmd: sudo rm -rf /var/run/docker.sock
-      become_user: jenkins
+        cmd: apt-get purge -y docker-engine docker docker.io docker-ce docker-ce-cli
+        cmd: apt-get autoremove -y --purge docker-engine docker docker.io docker-ce
+        cmd: rm -rf /var/lib/docker /etc/docker
+        cmd: groupdel docker
+        cmd: rm -rf /var/run/docker.sock
