aprendendo sobre jenkins

--- a/ansible/playbook/docker-uninstall.yaml
+++ b/ansible/playbook/docker-uninstall.yaml
@@ -1,7 +1,6 @@
 ---
 - hosts: local
   connection: local
-  become_user: jenkins
   tasks:
 
     - name: UNINSTALL DOCKER-CE
@@ -11,3 +10,4 @@
         cmd: rm -rf /var/lib/docker /etc/docker
         cmd: groupdel docker
         cmd: rm -rf /var/run/docker.sock
+        cmd: docker version
