--- a/ansible/playbook/docker-uninstall.yaml
+++ b/ansible/playbook/docker-uninstall.yaml
@@ -5,9 +5,9 @@
 
     - name: UNINSTALL DOCKER-CE
       shell:
-        cmd: apt-get purge -y docker-engine docker docker.io docker-ce docker-ce-cli /
-        apt-get autoremove -y --purge docker-engine docker docker.io docker-ce /
-        rm -rf /var/lib/docker /etc/docker /
-        groupdel docker /
-        rm -rf /var/run/docker.sock / 
+        cmd: apt-get purge -y docker-engine docker docker.io docker-ce docker-ce-cli && /
+        apt-get autoremove -y --purge docker-engine docker docker.io docker-ce && /
+        rm -rf /var/lib/docker /etc/docker && /
+        groupdel docker && /
+        rm -rf /var/run/docker.sock && / 
         docker version /
