--- a/ansible/playbook/docker-uninstall.yaml
+++ b/ansible/playbook/docker-uninstall.yaml
@@ -9,4 +9,4 @@
         cmd: apt-get autoremove -y --purge docker-engine docker docker.io docker-ce
         cmd: rm -rf /var/lib/docker /etc/docker
         cmd: groupdel docker
-        cmd: rm -rf /var/run/docker.sock
+        # cmd: rm -rf /var/run/docker.sock
