build terminate-clusters

--- a/aws/Jenkinsfile
+++ b/aws/Jenkinsfile
@@ -3,7 +3,12 @@ pipeline {
     stages {
         stage('Build') {
             steps {
-                sh '../aws/emr/list-cluster.sh'
+                sh '''
+                    aws emr list-clusters \
+                        --region us-east-1 \
+                        --active \
+                        --profile socialminer
+                '''
             }
         }
     }
