build terminate-clusters

--- a/aws/Jenkinsfile
+++ b/aws/Jenkinsfile
@@ -1,11 +1,13 @@
+@Library('github.com/releaseworks/jenkinslib') _
+
 pipeline {
     agent any
     stages {
         stage('Build') {
             steps {
-                sh """
-                    aws/emr/list-clusters.sh
-                """
+                withCredentials([[$class: 'UsernamePasswordMultiBinding', credentialsId: 'aws-key', usernameVariable: 'AWS_ACCESS_KEY_ID', passwordVariable: 'AWS_SECRET_ACCESS_KEY']]) {
+                    AWS("aws emr list-clusters --region us-east-1 --active")
+                }
             }
         }
     }
