build terminate-clusters

--- a/aws/Jenkinsfile
+++ b/aws/Jenkinsfile
@@ -1,14 +1,9 @@
 @Library('github.com/releaseworks/jenkinslib') _
 
-pipeline {
-    agent any
-    stages {
-        stage('Build') {
-            steps {
-                withCredentials([[$class: 'UsernamePasswordMultiBinding', credentialsId: 'aws-key', usernameVariable: 'AWS_ACCESS_KEY_ID', passwordVariable: 'AWS_SECRET_ACCESS_KEY']]) {
-                    AWS("aws emr list-clusters --region us-east-1 --active")
-                }
-            }
-        }
+node {
+  stage("List S3 buckets") {
+    withCredentials([[$class: 'UsernamePasswordMultiBinding', credentialsId: 'aws-key', usernameVariable: 'AWS_ACCESS_KEY_ID', passwordVariable: 'AWS_SECRET_ACCESS_KEY']]) {
+        AWS("--region=eu-west-1 s3 ls")
     }
+  }
 }
