--- a/aws/Jenkinsfile
+++ b/aws/Jenkinsfile
@@ -3,7 +3,7 @@
 node {
   stage("List S3 buckets") {
     withCredentials([[$class: 'UsernamePasswordMultiBinding', credentialsId: 'aws-key', usernameVariable: 'AWS_ACCESS_KEY_ID', passwordVariable: 'AWS_SECRET_ACCESS_KEY']]) {
-        AWS("aws emr list-clusters --region us-east-1 --active --profile socialminer")
+        AWS("--region=us-east-1 --active emr list-clusters")
     }
   }
 }
