build terminate-clusters

--- a/aws/Jenkinsfile
+++ b/aws/Jenkinsfile
@@ -1,9 +1,15 @@
 @Library('github.com/releaseworks/jenkinslib') _
 
 node {
-  stage("List S3 buckets") {
+  stage("LIST CLUSTERS") {
     withCredentials([[$class: 'UsernamePasswordMultiBinding', credentialsId: 'aws-key', usernameVariable: 'AWS_ACCESS_KEY_ID', passwordVariable: 'AWS_SECRET_ACCESS_KEY']]) {
-        AWS("--region=us-east-1 --active emr list-clusters")
+        LIST_CLUSTERS='AWS("--region=us-east-2 --active --output=text --query='Clusters[*].[Id]' emr list-clusters")'
+        echo ${LIST_CLUSTERS}
     }
   }
+//   stage("TERMINATE CLUSTERS") {
+//     withCredentials([[$class: 'UsernamePasswordMultiBinding', credentialsId: 'aws-key', usernameVariable: 'AWS_ACCESS_KEY_ID', passwordVariable: 'AWS_SECRET_ACCESS_KEY']]) {
+//         AWS("--region=us-east-2 --cluster-ids "" emr terminate-clusters")
+//     }
+//   }
 }
