build terminate-clusters

--- a/aws/Jenkinsfile
+++ b/aws/Jenkinsfile
@@ -3,7 +3,7 @@
 node {
   stage("LIST CLUSTERS") {
     withCredentials([[$class: 'UsernamePasswordMultiBinding', credentialsId: 'aws-key', usernameVariable: 'AWS_ACCESS_KEY_ID', passwordVariable: 'AWS_SECRET_ACCESS_KEY']]) {
-        LIST_CLUSTER = AWS("--region=us-east-2 --active --output=text --query='Clusters[*].[Id]' emr list-clusters")
+        LIST_CLUSTER = (AWS("--region=us-east-2 --active --output=text --query='Clusters[*].[Id]' emr list-clusters"))
     }
     echo "${LIST_CLUSTERS}"
   }
