--- a/aws/Jenkinsfile
+++ b/aws/Jenkinsfile
@@ -2,10 +2,13 @@
 
 node {
   stage("LIST CLUSTERS") {
-    withCredentials([[$class: 'UsernamePasswordMultiBinding', credentialsId: 'aws-key', usernameVariable: 'AWS_ACCESS_KEY_ID', passwordVariable: 'AWS_SECRET_ACCESS_KEY']]) {
-        LIST_CLUSTER = (AWS("--region=us-east-2 --active --output=text --query='Clusters[*].[Id]' emr list-clusters"))
+    withCredentials([[$class: 'UsernamePasswordMultiBinding',
+    credentialsId: 'aws-key',
+    usernameVariable: 'AWS_ACCESS_KEY_ID',
+    passwordVariable: 'AWS_SECRET_ACCESS_KEY']]) {
+        AWS("--region=us-east-2 --active --output=text --query='Clusters[*].[Id]' emr list-clusters")
     }
-    echo "${LIST_CLUSTERS}"
+    echo "${AWS}"
   }
 //   stage("TERMINATE CLUSTERS") {
 //     withCredentials([[$class: 'UsernamePasswordMultiBinding', credentialsId: 'aws-key', usernameVariable: 'AWS_ACCESS_KEY_ID', passwordVariable: 'AWS_SECRET_ACCESS_KEY']]) {
