build terminate-clusters

--- a/aws/Jenkinsfile
+++ b/aws/Jenkinsfile
@@ -8,7 +8,7 @@ node {
     passwordVariable: 'AWS_SECRET_ACCESS_KEY']]) {
         AWS("--region=us-east-1 --active --output=text --query 'Clusters[*].[Id]' emr list-clusters")
     }
-    echo "${AWS}"
+    echo "$AWS"
   }
 //   stage("TERMINATE CLUSTERS") {
 //     withCredentials([[$class: 'UsernamePasswordMultiBinding', credentialsId: 'aws-key', usernameVariable: 'AWS_ACCESS_KEY_ID', passwordVariable: 'AWS_SECRET_ACCESS_KEY']]) {
