build terminate-clusters

--- a/aws/Jenkinsfile
+++ b/aws/Jenkinsfile
@@ -6,9 +6,9 @@ node {
     credentialsId: 'aws-key',
     usernameVariable: 'AWS_ACCESS_KEY_ID',
     passwordVariable: 'AWS_SECRET_ACCESS_KEY']]) {
-        AWS("--region=us-east-1 --active --output=text --query 'Clusters[*].[Id]' emr list-clusters")
+        LIST_CLUSTER=AWS("--region=us-east-1 --active --output=text --query 'Clusters[*].[Id]' emr list-clusters")
     }
-    echo "$AWS"
+    echo "$LIST_CLUSTER"
   }
 //   stage("TERMINATE CLUSTERS") {
 //     withCredentials([[$class: 'UsernamePasswordMultiBinding', credentialsId: 'aws-key', usernameVariable: 'AWS_ACCESS_KEY_ID', passwordVariable: 'AWS_SECRET_ACCESS_KEY']]) {
