build terminate-clusters

--- a/aws/Jenkinsfile
+++ b/aws/Jenkinsfile
@@ -8,7 +8,7 @@ node {
     passwordVariable: 'AWS_SECRET_ACCESS_KEY']]) {
         LIST_CLUSTER=AWS("--region=us-east-1 --active --output=text --query 'Clusters[*].[Id]' emr list-clusters")
     }
-    echo "$LIST_CLUSTER"
+    echo "${LIST_CLUSTER}"
   }
 //   stage("TERMINATE CLUSTERS") {
 //     withCredentials([[$class: 'UsernamePasswordMultiBinding', credentialsId: 'aws-key', usernameVariable: 'AWS_ACCESS_KEY_ID', passwordVariable: 'AWS_SECRET_ACCESS_KEY']]) {
