--- a/aws/Jenkinsfile
+++ b/aws/Jenkinsfile
@@ -1,5 +1,3 @@
-// @Library('github.com/releaseworks/jenkinslib') _
-
 node {
   stage("LIST CLUSTERS") {
     withCredentials([[$class: 'UsernamePasswordMultiBinding',
@@ -7,12 +5,13 @@ node {
     usernameVariable: 'AWS_ACCESS_KEY_ID',
     passwordVariable: 'AWS_SECRET_ACCESS_KEY']]) {
         sh """
-            aws emr list-clusters \
+            LIST_CLUSTERS=`aws emr list-clusters \
             --region us-east-1 \
             --active \
             --output text \
-            --query 'Clusters[*].[Id]'
+            --query 'Clusters[*].[Id]'`
         """
+        echo "${LIST_CLUSTERS}"
     }
   }
 //   stage("TERMINATE CLUSTERS") {
