--- a/aws/Jenkinsfile
+++ b/aws/Jenkinsfile
@@ -5,7 +5,7 @@ node {
     usernameVariable: 'AWS_ACCESS_KEY_ID',
     passwordVariable: 'AWS_SECRET_ACCESS_KEY']]) {
         sh '''
-            LIST_CLUSTERS=`,aws emr list-clusters \
+            LIST_CLUSTERS=`aws emr list-clusters \
             --region us-east-1 \
             --active \
             --output text \
