--- a/aws/Jenkinsfile
+++ b/aws/Jenkinsfile
@@ -4,14 +4,15 @@ node {
     credentialsId: 'aws-key',
     usernameVariable: 'AWS_ACCESS_KEY_ID',
     passwordVariable: 'AWS_SECRET_ACCESS_KEY']]) {
-        sh '''
-            LIST_CLUSTERS=`aws emr list-clusters \
-            --region us-east-1 \
-            --active \
-            --output text \
-            --query 'Clusters[*].[Id]'`
-        '''
-        echo "$LIST_CLUSTERS"
+        LIST_CLUSTERS =
+        sh """
+            aws emr list-clusters \
+                --region us-east-1 \
+                --active \
+                --output text \
+                --query 'Clusters[*].[Id]'
+        """
+        echo "${LIST_CLUSTERS}"
     }
   }
 //   stage("TERMINATE CLUSTERS") {
