build terminate-clusters

--- a/aws/Jenkinsfile
+++ b/aws/Jenkinsfile
@@ -4,14 +4,13 @@ node {
     credentialsId: 'aws-key',
     usernameVariable: 'AWS_ACCESS_KEY_ID',
     passwordVariable: 'AWS_SECRET_ACCESS_KEY']]) {
-        LIST_CLUSTERS =
-        sh """
+        LIST_CLUSTERS = sh (
             aws emr list-clusters \
                 --region us-east-1 \
                 --active \
                 --output text \
                 --query 'Clusters[*].[Id]'
-        """
+        )
         echo "${LIST_CLUSTERS}"
     }
   }
