--- a/aws/Jenkinsfile
+++ b/aws/Jenkinsfile
@@ -6,9 +6,9 @@ node {
     passwordVariable: 'AWS_SECRET_ACCESS_KEY']]) {
         LIST_CLUSTERS = sh (
             script:
-                'aws emr list-clusters
-                    --region us-east-1
-                    --active --output text
+                'aws emr list-clusters \
+                    --region us-east-1 \
+                    --active --output text \
                     --query Clusters[*].[Id]',
                     returnStdout: true
         ).trim()
