--- a/aws/Jenkinsfile
+++ b/aws/Jenkinsfile
@@ -4,8 +4,9 @@ node {
     credentialsId: 'aws-key',
     usernameVariable: 'AWS_ACCESS_KEY_ID',
     passwordVariable: 'AWS_SECRET_ACCESS_KEY']]) {
-        LIST_CLUSTERS = sh (script: 'aws emr list-clusters --region us-east-1 --active --output text --query Clusters[*].[Id]',returnStdout: true).trim()
-        sh (script: "aws emr --region us-east-1 --cluster-ids "\""${LIST_CLUSTERS}"\"")
+        LIST_CLUSTERS = sh (script: 'aws emr list-clusters --region us-east-1 --active --output json --query Clusters[*].[Id]',returnStdout: true).trim()
+        LIST_CLUSTERS_FORMATED = sh (script: "echo $LIST_CLUSTERS |sed 's/[][]//g'")
+        // sh (script: "aws emr terminate-clusters --region us-east-1 --cluster-ids ${LIST_CLUSTERS_FORMATED}")
     }
   }
 }
