--- a/aws/Jenkinsfile
+++ b/aws/Jenkinsfile
@@ -1,18 +1,16 @@
 pipeline {
-    agent any
+    agent node
     stages {
-        node {
-            stage("LIST CLUSTERS") {
-                steps {
-                    withCredentials([[$class: 'UsernamePasswordMultiBinding',
-                    credentialsId: 'aws-key',
-                    usernameVariable: 'AWS_ACCESS_KEY_ID',
-                    passwordVariable: 'AWS_SECRET_ACCESS_KEY']]) {
-                        LIST_CLUSTERS = sh (script: 'aws emr list-clusters --region us-east-1 --active --output json --query Clusters[*].[Id]',returnStdout: true).trim()
-                        echo "${LIST_CLUSTERS}" |sed 's/[][]//g'
-                        // echo "${LIST_CLUSTERS_FORMATED}"
-                        // sh (script: "aws emr terminate-clusters --region us-east-1 --cluster-ids ${LIST_CLUSTERS_FORMATED}")
-                    }
+        stage("LIST CLUSTERS") {
+            steps {
+                withCredentials([[$class: 'UsernamePasswordMultiBinding',
+                credentialsId: 'aws-key',
+                usernameVariable: 'AWS_ACCESS_KEY_ID',
+                passwordVariable: 'AWS_SECRET_ACCESS_KEY']]) {
+                    LIST_CLUSTERS = sh (script: 'aws emr list-clusters --region us-east-1 --active --output json --query Clusters[*].[Id]',returnStdout: true).trim()
+                    echo "${LIST_CLUSTERS}" |sed 's/[][]//g'
+                    // echo "${LIST_CLUSTERS_FORMATED}"
+                    // sh (script: "aws emr terminate-clusters --region us-east-1 --cluster-ids ${LIST_CLUSTERS_FORMATED}")
                 }
             }
         }
