--- a/aws/Jenkinsfile
+++ b/aws/Jenkinsfile
@@ -5,9 +5,9 @@ node {
     usernameVariable: 'AWS_ACCESS_KEY_ID',
     passwordVariable: 'AWS_SECRET_ACCESS_KEY']]) {
         LIST_CLUSTERS = sh (script: 'aws emr list-clusters --region us-east-1 --active --output json --query Clusters[*].[Id]',returnStdout: true).trim()
-        sh '''
-            echo "${LIST_CLUSTERS}" |sed 's/[][]//g'
-        '''
+        sh """
+            echo ${LIST_CLUSTERS} |sed 's/[][]//g'
+        """
         // echo "${LIST_CLUSTERS_FORMATED}"
         // sh (script: "aws emr terminate-clusters --region us-east-1 --cluster-ids ${LIST_CLUSTERS_FORMATED}")
     }
