--- a/aws/Jenkinsfile
+++ b/aws/Jenkinsfile
@@ -4,10 +4,22 @@ node {
     credentialsId: 'aws-key',
     usernameVariable: 'AWS_ACCESS_KEY_ID',
     passwordVariable: 'AWS_SECRET_ACCESS_KEY']]) {
-        LIST_CLUSTERS = sh (script: 'aws emr list-clusters --region us-east-1 --active --output json --query Clusters[*].[Id]',returnStdout: true).trim()
-        echo "${LIST_CLUSTERS}"
-        LIST_CLUSTERS_FORMATED = sh (script: LIST_CLUSTERS_FORMATED=$(echo ${LIST_CLUSTERS} |sed 's/[][]//g'))
-        echo "${LIST_CLUSTERS_FORMATED}"
+        sh """
+            LIST_CLUSTERS=`
+                aws emr list-clusters \
+                    --region us-east-1 \
+                    --active \
+                    --output json \
+                    --query 'Clusters[*].[Id]' \
+                    --profile socialminer`
+
+            LIST_CLUSTERS_FORMATED=$(echo $LIST_CLUSTERS |sed 's/[][]//g')
+            echo $LIST_CLUSTERS_FORMATED
+        """
+        // LIST_CLUSTERS = sh (script: 'aws emr list-clusters --region us-east-1 --active --output json --query Clusters[*].[Id]',returnStdout: true).trim()
+        // echo "${LIST_CLUSTERS}"
+        // LIST_CLUSTERS_FORMATED = sh (script: LIST_CLUSTERS_FORMATED=$(echo ${LIST_CLUSTERS} |sed 's/[][]//g'))
+        // echo "${LIST_CLUSTERS_FORMATED}"
         // sh (script: "aws emr terminate-clusters --region us-east-1 --cluster-ids ${LIST_CLUSTERS_FORMATED}")
     }
   }
