build terminate-clusters

--- a/aws/Jenkinsfile
+++ b/aws/Jenkinsfile
@@ -13,8 +13,8 @@ node {
                     --query 'Clusters[*].[Id]' \
                     --profile socialminer`
 
-            LIST_CLUSTERS_FORMATED=$(echo $LIST_CLUSTERS |sed 's/[][]//g')
-            echo $LIST_CLUSTERS_FORMATED
+            LIST_CLUSTERS_FORMATED=$(echo $\LIST_CLUSTERS |sed 's/[][]//g')
+            echo $\LIST_CLUSTERS_FORMATED
         """
         // LIST_CLUSTERS = sh (script: 'aws emr list-clusters --region us-east-1 --active --output json --query Clusters[*].[Id]',returnStdout: true).trim()
         // echo "${LIST_CLUSTERS}"
