build terminate-clusters

--- a/aws/Jenkinsfile
+++ b/aws/Jenkinsfile
@@ -4,7 +4,7 @@ node {
     credentialsId: 'aws-key',
     usernameVariable: 'AWS_ACCESS_KEY_ID',
     passwordVariable: 'AWS_SECRET_ACCESS_KEY']]) {
-        sh """
+        sh '''
             LIST_CLUSTERS=`
                 aws emr list-clusters \
                     --region us-east-1 \
@@ -13,9 +13,9 @@ node {
                     --query 'Clusters[*].[Id]' \
                     --profile socialminer`
 
-            LIST_CLUSTERS_FORMATED=$(echo $\LIST_CLUSTERS |sed 's/[][]//g')
-            echo $\LIST_CLUSTERS_FORMATED
-        """
+            LIST_CLUSTERS_FORMATED=\$(echo \$LIST_CLUSTERS |sed 's/[][]//g')
+            echo \$LIST_CLUSTERS_FORMATED
+        '''
         // LIST_CLUSTERS = sh (script: 'aws emr list-clusters --region us-east-1 --active --output json --query Clusters[*].[Id]',returnStdout: true).trim()
         // echo "${LIST_CLUSTERS}"
         // LIST_CLUSTERS_FORMATED = sh (script: LIST_CLUSTERS_FORMATED=$(echo ${LIST_CLUSTERS} |sed 's/[][]//g'))
