--- a/aws/Jenkinsfile
+++ b/aws/Jenkinsfile
@@ -10,8 +10,7 @@ node {
                     --region us-east-1 \
                     --active \
                     --output json \
-                    --query 'Clusters[*].[Id]' \
-                    --profile socialminer`
+                    --query 'Clusters[*].[Id]'
 
             LIST_CLUSTERS_FORMATED=\$(echo \$LIST_CLUSTERS |sed 's/[][]//g')
             echo \$LIST_CLUSTERS_FORMATED
