--- a/aws/Jenkinsfile
+++ b/aws/Jenkinsfile
@@ -5,9 +5,9 @@ node {
     usernameVariable: 'AWS_ACCESS_KEY_ID',
     passwordVariable: 'AWS_SECRET_ACCESS_KEY']]) {
         sh '''
-            LIST_CLUSTERS=`aws emr list-clusters
-                --region us-east-1
-                --active --output json
+            LIST_CLUSTERS=`aws emr list-clusters \
+                --region us-east-1 \
+                --active --output json \
                 --query 'Clusters[*].[Id]'`
 
             LIST_CLUSTERS_FORMATED=$(echo $LIST_CLUSTERS |sed 's/[][]//g')
