--- a/aws/Jenkinsfile
+++ b/aws/Jenkinsfile
@@ -10,7 +10,11 @@ node {
                 --active --output json \
                 --query 'Clusters[*].[Id]'`
         '''
-        sh '''LIST_CLUSTERS_FORMATED=$(echo $LIST_CLUSTERS |sed 's/[][]//g')'''
+        sh '''
+            LIST_CLUSTERS_FORMATED= \
+            `$(echo $LIST_CLUSTERS \
+            |sed 's/[][]//g')`
+        '''
         echo "${LIST_CLUSTERS_FORMATED}"
     }
   }
