--- a/aws/Jenkinsfile
+++ b/aws/Jenkinsfile
@@ -1,22 +1,24 @@
 node {
-  stage("LIST CLUSTERS") {
-    withCredentials([[$class: 'UsernamePasswordMultiBinding',
-    credentialsId: 'aws-key',
-    usernameVariable: 'AWS_ACCESS_KEY_ID',
-    passwordVariable: 'AWS_SECRET_ACCESS_KEY']]) {
-        LIST_CLUSTERS=
-        sh '''
-            aws emr list-clusters \
-                --region us-east-1 \
-                --active --output json \
-                --query 'Clusters[*].[Id]'
-        '''
-        echo "${LIST_CLUSTERS}"
-        LIST_CLUSTERS_FORMATED=
-        sh '''
-            echo $LIST_CLUSTERS |sed 's/[][]//g')`
-        '''
-        echo "${LIST_CLUSTERS_FORMATED}"
+    stage("LIST CLUSTERS") {
+        withCredentials([[$class: 'UsernamePasswordMultiBinding',
+        credentialsId: 'aws-key',
+        usernameVariable: 'AWS_ACCESS_KEY_ID',
+        passwordVariable: 'AWS_SECRET_ACCESS_KEY']]) {
+            script {
+                LIST_CLUSTERS=
+                sh '''
+                    aws emr list-clusters \
+                        --region us-east-1 \
+                        --active --output json \
+                        --query 'Clusters[*].[Id]'
+                '''
+                echo "${LIST_CLUSTERS}"
+                LIST_CLUSTERS_FORMATED=
+                sh '''
+                    echo $LIST_CLUSTERS |sed 's/[][]//g')`
+                '''
+                echo "${LIST_CLUSTERS_FORMATED}"
+            }
+        }
     }
-  }
 }
