--- a/aws/Jenkinsfile
+++ b/aws/Jenkinsfile
@@ -5,19 +5,16 @@ node {
         usernameVariable: 'AWS_ACCESS_KEY_ID',
         passwordVariable: 'AWS_SECRET_ACCESS_KEY']]) {
             script {
-                LIST_CLUSTERS=
-                sh '''
+                LIST_CLUSTERS=`
                     aws emr list-clusters \
                         --region us-east-1 \
-                        --active --output json \
-                        --query 'Clusters[*].[Id]'
-                echo "${LIST_CLUSTERS}"
-                '''
-                LIST_CLUSTERS_FORMATED=
-                sh '''
-                    echo $LIST_CLUSTERS |sed 's/[][]//g')`
-                '''
-                echo "${LIST_CLUSTERS_FORMATED}"
+                        --active \
+                        --output json \
+                        --query 'Clusters[*].[Id]' \
+                        --profile socialminer`
+
+                LIST_CLUSTERS_FORMATED=$(echo $LIST_CLUSTERS |sed 's/[][]//g')
+                echo $LIST_CLUSTERS_FORMATED
             }
         }
     }
