--- a/aws/Jenkinsfile
+++ b/aws/Jenkinsfile
@@ -5,14 +5,14 @@ node {
         usernameVariable: 'AWS_ACCESS_KEY_ID',
         passwordVariable: 'AWS_SECRET_ACCESS_KEY']]) {
             script {
-                LIST_CLUSTERS=`
-                    aws emr list-clusters \
-                        --region us-east-1 \
-                        --active \
-                        --output json \
-                        --query 'Clusters[*].[Id]' \
-                        --profile socialminer`
-
+                LIST_CLUSTERS=
+                    sh '''
+                        aws emr list-clusters \
+                            --region us-east-1 \
+                            --active \
+                            --output json \
+                            --query 'Clusters[*].[Id]'
+                    '''
                 LIST_CLUSTERS_FORMATED=$(echo $LIST_CLUSTERS |sed 's/[][]//g')
                 echo $LIST_CLUSTERS_FORMATED
             }
