--- a/aws/Jenkinsfile
+++ b/aws/Jenkinsfile
@@ -1,22 +1,14 @@
-node {
-    stage("LIST CLUSTERS") {
-        withCredentials([[$class: 'UsernamePasswordMultiBinding',
-        credentialsId: 'aws-key',
-        usernameVariable: 'AWS_ACCESS_KEY_ID',
-        passwordVariable: 'AWS_SECRET_ACCESS_KEY']]) {
-            script {
-                LIST_CLUSTERS=
-                    sh '''
-                        aws emr list-clusters \
-                            --region us-east-1 \
-                            --active \
-                            --output json \
-                            --query 'Clusters[*].[Id]'
-                    '''
-                    sh '''
-                        LIST_CLUSTERS_FORMATED=$(echo $LIST_CLUSTERS |sed 's/[][]//g')
-                        echo $LIST_CLUSTERS_FORMATED
-                    '''
+pipeline {
+    agent node
+    stages {
+        stage("LIST CLUSTERS") {
+            withCredentials([[$class: 'UsernamePasswordMultiBinding',
+            credentialsId: 'aws-key',
+            usernameVariable: 'AWS_ACCESS_KEY_ID',
+            passwordVariable: 'AWS_SECRET_ACCESS_KEY']]) {
+                script {
+                    ls
+                }
             }
         }
     }
