--- a/aws/Jenkinsfile
+++ b/aws/Jenkinsfile
@@ -1,13 +1,19 @@
 pipeline {
-    agent node
-    stages {
-        stage("LIST CLUSTERS") {
-            withCredentials([[$class: 'UsernamePasswordMultiBinding',
-            credentialsId: 'aws-key',
-            usernameVariable: 'AWS_ACCESS_KEY_ID',
-            passwordVariable: 'AWS_SECRET_ACCESS_KEY']]) {
-                script {
-                    ls
+    agent {
+        node {
+            stages {
+                stage("LIST CLUSTERS") {
+                    withCredentials([[$class: 'UsernamePasswordMultiBinding',
+                    credentialsId: 'aws-key',
+                    usernameVariable: 'AWS_ACCESS_KEY_ID',
+                    passwordVariable: 'AWS_SECRET_ACCESS_KEY']])
+                }
+                stage('Build') {
+                    steps {
+                        script {
+                            ls
+                        }
+                    }
                 }
             }
         }
