build terminate-clusters

--- a/aws/Jenkinsfile
+++ b/aws/Jenkinsfile
@@ -3,14 +3,11 @@ pipeline {
         node {
             stages {
                 stage("LIST CLUSTERS") {
-                    withCredentials([[$class: 'UsernamePasswordMultiBinding',
-                    credentialsId: 'aws-key',
-                    usernameVariable: 'AWS_ACCESS_KEY_ID',
-                    passwordVariable: 'AWS_SECRET_ACCESS_KEY']])
-                }
-                stage('Build') {
                     steps {
-                        script {
+                        withCredentials([[$class: 'UsernamePasswordMultiBinding',
+                        credentialsId: 'aws-key',
+                        usernameVariable: 'AWS_ACCESS_KEY_ID',
+                        passwordVariable: 'AWS_SECRET_ACCESS_KEY']]) {
                             ls
                         }
                     }
