--- a/aws/Jenkinsfile
+++ b/aws/Jenkinsfile
@@ -5,7 +5,18 @@ node {
         credentialsId: 'aws-key',
         usernameVariable: 'AWS_ACCESS_KEY_ID',
         passwordVariable: 'AWS_SECRET_ACCESS_KEY']]) {
-            ls
+            script {
+                LIST_CLUSTERS=`
+                aws emr list-clusters \
+                    --region us-east-1 \
+                    --active \
+                    --output json \
+                    --query 'Clusters[*].[Id]' \
+                    --profile socialminer`
+
+                LIST_CLUSTERS_FORMATED=$(echo $LIST_CLUSTERS |sed 's/[][]//g')
+                echo $LIST_CLUSTERS_FORMATED
+            }
         }
     }
 }
