--- a/aws/Jenkinsfile
+++ b/aws/Jenkinsfile
@@ -7,11 +7,11 @@ node {
         passwordVariable: 'AWS_SECRET_ACCESS_KEY']]) {
             script {
                 LIST_CLUSTERS=
-                aws emr list-clusters \
+                'aws emr list-clusters \
                     --region us-east-1 \
                     --active \
                     --output json \
-                    --query 'Clusters[*].[Id]'
+                    --query 'Clusters[*].[Id]''
 
                 LIST_CLUSTERS_FORMATED=$(echo "${LIST_CLUSTERS}" |sed 's/[][]//g')
                 echo $LIST_CLUSTERS_FORMATED
