--- a/aws/Jenkinsfile
+++ b/aws/Jenkinsfile
@@ -5,11 +5,12 @@ node {
     usernameVariable: 'AWS_ACCESS_KEY_ID',
     passwordVariable: 'AWS_SECRET_ACCESS_KEY']]) {
         sh '''
-            LIST_CLUSTERS=`aws emr list-clusters --region us-east-1 --active --output json --query 'Clusters[*].[Id]'`
-        '''
-        sh '''
-            LIST_CLUSTERS_FORMATED=\$(echo \$LIST_CLUSTERS |sed 's/[][]//g')
-            echo \$LIST_CLUSTERS_FORMATED
+        LIST_CLUSTERS=
+            aws emr list-clusters \
+                --region us-east-1 \
+                --active \
+                --output json \
+                --query 'Clusters[*].[Id]'
         '''
     }
   }
